zig/src/lua_api/lauxlib.h

typedef struct luaL_Buffer luaL_Buffer;
typedef struct luaL_Reg {
  const char *name;
  lua_CFunction func;
} luaL_Reg;
LUALIB_API void(luaL_checkversion_)(lua_State *L, lua_Number ver, size_t sz);
LUALIB_API lua_Number(luaL_checknumber)(lua_State *L, int arg);
LUALIB_API lua_Number(luaL_optnumber)(lua_State *L, int arg, lua_Number def);
LUALIB_API lua_Integer(luaL_checkinteger)(lua_State *L, int arg);
LUALIB_API lua_Integer(luaL_optinteger)(lua_State *L, int arg, lua_Integer def);
LUALIB_API void(luaL_checkstack)(lua_State *L, int sz, const char *msg);
LUALIB_API void(luaL_checktype)(lua_State *L, int arg, int t);
LUALIB_API void(luaL_checkany)(lua_State *L, int arg);
LUALIB_API void(luaL_setmetatable)(lua_State *L, const char *tname);
LUALIB_API void(luaL_where)(lua_State *L, int lvl);
LUALIB_API void(luaL_unref)(lua_State *L, int t, int ref);
LUALIB_API lua_Integer(luaL_len)(lua_State *L, int idx);
LUALIB_API void(luaL_addgsub)(luaL_Buffer *b, const char *s, const char *p,
                              const char *r);
LUALIB_API void(luaL_setfuncs)(lua_State *L, const luaL_Reg *l, int nup);
LUALIB_API void(luaL_traceback)(lua_State *L, lua_State *L1, const char *msg,
                                int level);
LUALIB_API void(luaL_requiref)(lua_State *L, const char *modname,
                               lua_CFunction openf, int glb);
/*
** {======================================================
** Generic Buffer manipulation
** =======================================================
*/

struct luaL_Buffer {
  char *b;     /* buffer address */
  size_t size; /* buffer size */
  size_t n;    /* number of characters in buffer */
  lua_State *L;
  union {
    LUAI_MAXALIGN;           /* ensure maximum alignment for buffer */
    char b[LUAL_BUFFERSIZE]; /* initial buffer */
  } init;
};
LUALIB_API void(luaL_buffinit)(lua_State *L, luaL_Buffer *B);
LUALIB_API void(luaL_addlstring)(luaL_Buffer *B, const char *s, size_t l);
LUALIB_API void(luaL_addstring)(luaL_Buffer *B, const char *s);
LUALIB_API void(luaL_addvalue)(luaL_Buffer *B);
LUALIB_API void(luaL_pushresult)(luaL_Buffer *B);
LUALIB_API void(luaL_pushresultsize)(luaL_Buffer *B, size_t sz);